--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ print greeting;  # Outputs: Hello World</code></pre>
     </section>
 
     <footer>
-        <p>&copy; 2025 Apolo Language. All rights reserved.</p>
-        <p>Source available on GitHub (hypothetical link).</p>
+        <p>Apolo Language. Open Source for Everyone.</p>
+        <p>Source available on <a href="https://github.com/ogoncas/apolo">GitHub</a></p>
     </footer>
 </body>
 </html>
